# todoApp

./: pyproject.toml
todo/: main.py  setting.py
