[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["ArsalanAyaz <henrykoff7788@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
pytest = "^8.1.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
